# butter-plugin-notes

./: .gitignore  CLAUDE.md  LICENSE  README.md  justfile  manifest.toml  pyproject.toml
src/butter_plugin_notes/: __init__.py  plugin.py
tests/: test_plugin.py
