[project]
name = 'butter-plugin-notes'
version = '0.2.0'
description = 'Notes plugin for butter-agent — persistent free-form note capture via the shared database plugin.'
readme = 'README.md'
requires-python = '>=3.12'
license = { text = 'MIT' }
authors = [{ name = 'Shane Grech' }]
# No runtime deps — stdlib `asyncio` + `datetime`. Persistence is not a
# runtime dep: notes never opens a database, it calls the host's shared
# `database` plugin via PluginContext. `butter-agent` is a *dev* dep only
# (provides the Plugin / PluginContext Protocols for typing + the manifest
# validator for tests); plugins do not import butter at runtime.
dependencies = []

[dependency-groups]
dev = [
    'butter-agent',
    'pytest>=8.0',
    'pytest-asyncio>=0.23',
    'ruff>=0.6',
    'mypy>=1.10',
]

[tool.uv.sources]
butter-agent = { path = '../butter-agent', editable = true }

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/butter_plugin_notes']

[tool.hatch.build.targets.wheel.force-include]
'manifest.toml' = 'butter_plugin_notes/manifest.toml'

[tool.ruff]
line-length = 320
target-version = 'py312'
src = ['src', 'tests']

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'

[tool.ruff.lint]
select = ['E', 'F', 'I', 'UP', 'B', 'SIM', 'RUF']
ignore = []

[tool.ruff.lint.isort]
known-first-party = ['butter_plugin_notes']

[tool.mypy]
python_version = '3.12'
strict = true
files = ['src', 'tests']
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = '-ra --strict-markers'
asyncio_mode = 'auto'
